--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "body-parser": "^1.6.5",
     "cookie-parser": "^1.3.2",
     "debug": "^1.0.4",
+    "diskdb": "^0.1.14",
     "ejs": "^1.0.0",
     "express": "^4.8.5",
     "forever": "^0.11.1",
-    "mongojs": "^0.14.0",
     "morgan": "^1.2.3"
   },
   "devDependencies": {
